Revision history for {{ $dist->name }}:

{{$NEXT}}

v0.1.1    2018-11-18 12:01:40+00:00 Europe/London
  [Tests]
  - Added diagnostics for cpantesters.

v0.1.0    2018-11-18 01:35:56+00:00 Europe/London
- Initial release on CPAN,

Note that an earlier version was submitted as a pull request to
DBIx-Class-Helpers.  It was not accepted due to the addition of
prerequisites for Types::SQL (and implicity Type::Tiny).