@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Removed reliance on Hash::Merge.
 
 v0.1.1    2018-11-18 12:01:40+00:00 Europe/London
   [Tests]
